# Hermes4ArXiv

./: ADVANCED_CONFIG.md  CHANGELOG.md  QUICKSTART.md  README.md  TODO_OPTIMIZATION.md  config.yml  env.example  package-lock.json  pyproject.toml
.github/workflows/: daily_paper_analysis_optimized.yml
docs/setup/: QWEN_SETUP_GUIDE.md
src/: config.py  main.py
src/ai/: __init__.py  analyzer.py  batch_coordinator.py  prompts.py
src/data/: arxiv_client.py
src/output/: formatter.py
src/output/templates/: email_template.html
