[project]
name = "arxiv-paper-tracker"
version = "1.0.0"
description = "一个基于 GitHub Actions 的自动化工具，每天自动追踪和分析 arXiv 最新论文"
authors = [
    { name = "ArXiv Paper Tracker Team", email = "your-email@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["arxiv", "paper", "ai", "analysis", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Markup :: Markdown",
]

dependencies = [
    "arxiv>=1.4.8",
    "openai>=1.0.0", # 支持DeepSeek等OpenAI兼容API
    "zhipuai>=2.0.0", # 智谱GLM官方SDK
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.2",
    "pyyaml>=6.0",
    "tenacity>=8.2.0",
    "pymupdf>=1.23.0",
    "tiktoken>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/your-username/arxiv_paper_tracker"
Repository = "https://github.com/your-username/arxiv_paper_tracker"
Issues = "https://github.com/your-username/arxiv_paper_tracker/issues"
Documentation = "https://github.com/your-username/arxiv_paper_tracker#readme"

[project.scripts]
arxiv-tracker = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["-v"]
asyncio_default_fixture_loop_scope = "function" 
